# cnctd_android_project

./: Cargo.toml
src/: lib.rs
